--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,50 @@
 header {
-    font-family: 'Times New Roman', serif;
     text-align: center;
+    color: white;
 }
 h1 {
-    color: white;
+    font-family: 'Times New Roman', serif;
+    text-shadow: 2px 2px 4px rgba(50, 50, 50, 0.75);
 }
-h2 {
+h2.header {
+    font-family: 'Times New Roman', serif;
     background-image: linear-gradient(to bottom right, goldenrod, gold, goldenrod);
-    color: white;
-    text-shadow: 2px 2px #747474;
-    padding: 8px;
+    text-shadow: 2px 2px 4px rgba(50, 50, 50, 0.75);
+    padding: 12px;
     margin: -8px;
-    border-bottom: #194f2b solid 4px;
+    border-bottom: #194f2b solid 6px;
+}
+header p {
+    word-spacing: 5em;
+    text-shadow: 2px 2px 4px rgba(50, 50, 50, 0.75);
 }
 body {
     font-family: 'Helvetica', sans-serif;
-    background-image: url(images/canyon-5552326_1920.jpg);
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: 100%;
+    margin: 0;
+    padding: 0;
+}
+#top {
+    background: url(images/canyon-5552326_1920.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+#bottom {
+    background: url(images/architecture-768432_1920.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 h3 {
     text-align: center;
+    text-decoration: underline;
     font-size: 1.5em;
+    text-shadow: 2px 2px 4px rgba(50, 50, 50, 0.75);
+}
+#about {
+    font-size: large;
 }
 .button {
     text-align: center;
@@ -33,17 +55,22 @@ a.btn {
     color: white;
     background-image: linear-gradient(to bottom right, goldenrod, gold, goldenrod);
     padding: 4px;
-    margin: auto 10px;
+    margin: auto 8px;
+    text-shadow: 2px 2px 4px rgba(50, 50, 50, 0.75);
+    -webkit-box-shadow: 2px 2px 4px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    2px 2px 4px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:         2px 2px 4px 0px rgba(50, 50, 50, 0.75);
 }
 section {
-    background: rgba(159, 226, 191, 0.6);
+    background: rgba(159, 226, 191, 0.75);
     width: 800px;
     padding: 8px;
     margin: 16px auto;
 }
 figure {
     float: left;
-    margin: auto 8px auto auto;
+    margin: auto;
+    margin-right: 8px;
 }
 figcaption {
     font-style: italic;
@@ -56,20 +83,45 @@ figcaption {
     color: #194f2b;
     text-align: end;
 }
-#quote-bar {
-    width: 100%;
-    position: absolute;
+h2.middle {
+    background-image: linear-gradient(to bottom right, goldenrod, gold, goldenrod);
+    color: white;
+    text-shadow: 2px 2px 4px rgba(50, 50, 50, 0.75);
+    padding: 20px;
+    border-top: #194f2b solid 6px;
+    border-bottom: #194f2b solid 6px;
     font-size: 2em;
     font-family: cursive;
     text-align: center;
-    padding: 20px 0px 20px 0px;
-    border-top:#194f2b solid 4px;
-    margin: 8px -8px 8px -8px;
+    margin: -8px;
 }
 .btn:hover {
     background: #194f2b;
-    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-    box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
-    transition: all 0.4s ease 0s;
+    color: white;
+    transition: all 0.8s ease 0s;
   }
+a.link:hover {
+    color: purple;
+}
+#num-bar {
+    color: #194f2b;
+    background: rgba(159, 226, 191, 0.75);
+    width: 800px;
+    text-shadow: 2px 2px 4px rgba(50, 50, 50, 0.75);
+    text-align: center;
+    font-weight: bold;
+    font-size: large;
+    padding: 0px 8px;
+    margin: auto;
+}
+footer {
+    font-size: larger;
+    font-weight: bold;
+    background-image: linear-gradient(to bottom right, goldenrod, gold, goldenrod);
+    color: white;
+    text-shadow: 2px 2px 4px rgba(50, 50, 50, 0.75);
+    padding: 8px;
+    border-top:#194f2b solid 6px;
+    text-align: center;
+    margin: -8px;
+}
